# ai-training-data-pipeline

./: GITHUB_SUBMISSION.md  README.md  SUBMISSION_GUIDE.md  pyproject.toml
data/exports/: instruction_dataset.sample.jsonl
data/raw/: SOURCE_MANIFEST.md  demo_extra.csv  demo_qa.jsonl  extra_notes.txt
docs/: cleaning_and_scoring_logic.md  dataset_design.md
reports/: dashboard.html  data_quality_report.md
scripts/: build_dashboard.py  make_demo_dataset.py  preview_export.py  run_pipeline.py
src/ai_data_pipeline/: __init__.py  cleaning.py  dedupe.py  io_utils.py  loaders.py  models.py  pipeline.py  reporting.py  scoring.py
tests/: test_pipeline_units.py
